--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,18 @@ data/mali_data_portal_outcomes_2000-2017.csv
 data/mali_schools_no_dates_or_geocodes.xlsx
 data/polityV.xls
 data/V-Dem-CY-Full+Others-v12.rds
+*.rds
+*.dbf
+*.prj
+*.shp
+*.shx
+*.dta
+*.sbn
+*.sbx
+*.xml
+*.CPG
+*.FRQ
+*.FRW
+*.MAP
+*.DCT
+*.csv
